--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -3,24 +3,28 @@
   padding: 16px;
   margin-bottom: 16px;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+justify-content: space-between;
+flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 1000px) {
   .header-main-container {
     background-color: #263238;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  }
+  .menuDrop{
+    margin-top: 52px !important;
   }
 }
 
-.header-logo-container,
-.header-search-container,
-.header-upload-btn-container,
-.header-profile-btn-container {
+.menuDrop{
+  margin-top: 40px;
+}
+
+.header-logo-container, .header-search-container, .header-upload-btn-container, .header-profile-btn-container {
   align-self: center;
 }
 
@@ -65,21 +69,26 @@
   display: block;
 }
 
-.my-account-dropdown-menu-item,
-.logout-dropdown-menu-item {
+.my-account-dropdown-menu-item, .logout-dropdown-menu-item {
   text-decoration: none;
   color: #000;
   cursor: pointer;
 }
 
-.red {
-  color: red;
+.red
+{
+    color: red;
 }
 
-.dispNone {
-  display: none;
+.dispNone{
+  display:none;
 }
 
 .dispBlock {
   display: block;
+}
+
+.MuiInputBase-root.MuiInput-root.MuiInput-underline:after{
+border-bottom: white !important;
+width:8px !important;
 }
