--- a/src/screens/checkout/Checkout.css
+++ b/src/screens/checkout/Checkout.css
@@ -1,37 +1,49 @@
-.gridListMain {
-  display: flex;
-  flex-wrap: nowrap !important;
-  transform: translateZ(0);
-  height: 400px;
-  width: 1000px !important;
+.gridListMain{
+    display: flex;
+    flex-wrap:nowrap !important;
+    transform: translateZ(0);
+    height:400px;
+    width: 1000px !important;
+    
+}
+@media only screen and (max-width: 1400px) {
+    .saveAddressButton{
+        width:140px !important;
+    }
 }
 
-.gridListTile {
-  margin-top: 1%;
-  width: 33% !important;
-  height: 90% !important;
-  margin-left: 1%;
-  box-shadow: 2px -3px 6px 3px grey;
+.gridListTile{
+    margin-top: 1%;
+    width:33% !important;
+    height:90% !important;
+    margin-left: 1%;
+    box-shadow:2px -3px 6px 3px grey;
 }
 
-.selectedAddress {
-  margin-top: 1%;
-  width: 33% !important;
-  height: 90% !important;
-  margin-left: 1%;
-  box-shadow: 2px -3px 6px 3px #f50057;
+/*Higlighting selected address and check circle format*/
+.selectedAddress{
+    margin-top: 1%;
+    width:33% !important;
+    height:90% !important;
+    margin-left: 1%;
+    box-shadow:2px -3px 6px 3px #f50057;
 }
-.selectAddresscircle {
-  margin-left: 90% !important;
+.selectAddresscircle{
+margin-left: 80% !important;
 }
-.addressCard {
-  height: 290px !important;
+
+/*Individual address card height*/
+.addressCard{
+    height:290px !important;
 }
-.dispNone {
-  display: none;
-}
-.dispText {
-  display: block;
-  font-size: 30px;
-  margin-left: 4%;
-}
+
+/*Below display props to toggle "View Summary and "Change" button*/
+    .dispNone{
+        display: none;
+    }
+
+    .dispText{
+        display: block;
+        font-size: 30px;
+        margin-left:4%;
+    }
