--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -1,125 +1,170 @@
-/*Main restaurant details div display properties*/
-.resMainDiv {
-  height: auto;
-  width: auto;
+/*Main restaurant details div display properties*/  
+.resMainDiv{
+  padding: 1%;
+  margin: 'auto';
+  background-color: lightgrey;
+  border-radius: 0;
+  flex-grow: 1;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+
 }
 
-/*Res. image*/
-.divImage {
-  height: 100% !important;
-  width: 30% !important;
-}
-.mainDiv {
-  width: 100% !important;
-  height: 100% !important;
-}
-
-#imageDisplay {
+.itemNameinCart{
+  text-transform:capitalize;
+  width:40%;
+  vertical-align:middle;
   margin-top: 2%;
-  margin-bottom: 2%;
-  width: 400px !important;
-  height: 300px !important;
 }
 
-.detailsPageimage {
-  max-width: 100% !important;
-  max-height: 100% !important;
-}
-
-/*Res. name and ratings*/
-.resDetails {
-  font-family: Calibri (Body);
-  margin-right: 10%;
+/*Redefining style for all elements that need adjustment for smaller screen size*/
+@media  (max-width: 1000px){
+.resMainDiv{
+  padding: 1%;
+  margin: 'auto';
+  background-color: lightgrey;
+  border-radius: 0;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
-}
-.resName {
-  font-weight: 500;
-  font-size: 40px;
-}
-
-.cusRating {
-  font-size: 22px;
-  color: black;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
 }
 
-#LocalityCity {
-  font-weight: 500;
-  font-size: 26px;
-  text-transform: uppercase;
+.itemNameinCart{
+  text-transform:capitalize;
+  width:40%;
+  vertical-align:middle;
+  margin-top: 2%;
+  }
+
+.screenSize {
+  text-align: center;
 }
-.categories {
+}
+
+.myCartItemList{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
+.image{
+  width: 100%;
+  height: 100%;
+}
+
+  #imageDisplay{
+  margin-top:2%;
+  margin-bottom:2%;
+  width:400px !important;
+  height:300px !important;
+  }
+
+/*Res. name and ratings*/
+.resDetails{
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
+margin-right:10%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+}
+
+
+
+.resName{
+  font-weight: 500 !important;
+  font-size: 40px !important;
+}
+
+.cusRating{
+font-size: 22px;
+color: black;
+
+}
+
+#LocalityCity{
+  font-weight: 500 !important;
+font-size: 26px !important;
+text-transform: uppercase !important;
+}
+.categories{
   font-weight: 500;
-  font-size: 20px;
+  font-size:20px;
 }
 
 /*Cost for two data*/
-.cost4TwoDiv {
+.cost4TwoDiv{
   font-family: Calibri (Body);
   display: flex;
   width: 30% !important;
   position: relative;
 }
-#bottom-left {
-  left: 0;
-  bottom: 0;
-  position: absolute;
-  margin-bottom: 2%;
+#bottom-left
+{
+left: 0;
+bottom: 0;
+position:absolute;
+margin-bottom: 2%;
 }
 
-.orderFunction {
-  display: flex;
+.orderFunction{
+display: flex;
 }
 
-.orderMenu {
-  margin-top: 2%;
+.orderMenu{
+  margin-top:2%;
   display: block;
-  width: 40%;
-  margin-left: 2%;
+  width:40%;
+  margin-left:2%;
   position: relative;
 }
-.categoriesCart {
-  color: grey;
+.categoriesCart{
+  color:grey;
   text-transform: uppercase;
 }
 .price {
-  display: inline-block;
-  right: 0;
+  display:inline-block;
+  right:0;
   position: absolute;
-  margin-right: 10% !important;
-  margin-top: 2%;
+  margin-right:10% !important;
+  margin-top:2%;
 }
 .addIcon {
-  display: inline-block;
-  right: 0;
+  display:inline-block;
+  right:0;
   position: absolute;
 }
-.itemName {
-  display: inline-block;
+
+.itemName{
   margin-left: 3%;
-  margin-top: 2%;
+  margin-top:2%;
+  text-transform:capitalize;
 }
 
-.green {
-  color: green;
+.green{
+color:green;
 }
-.red {
-  color: red;
-}
-.menuList {
-  justify-content: center !important;
-  height: 40px !important;
-}
+.red{
+  color:red;
+  }
+  .menuList{
+    justify-content: center !important;
+    height:40px !important;
+  }
 
-.myCart {
-  margin-top: 2%;
-  width: 40%;
-  margin-left: 2%;
-  display: inline-block;
-}
-.cardRoot {
-  padding-left: 5%;
-}
+  .myCart{
+    margin-top:2%;
+    width:40%;
+    margin-left:2%;
+    display: inline-block;
+  }
+ .cardRoot{
+padding-left: 5%;
+  }
